Fix alignment of tag-browser tabs
git-svn-id: file:///Users/gauthierm/svnrepo/pinhole/trunk@19033 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/pinhole-date-tag-browser.css
+++ b/www/styles/pinhole-date-tag-browser.css
@@ -65,7 +65,7 @@
 .pinhole-date-tag-browser .selected {
 	font-weight: bold;
 	position: relative;
-	top: 1px;
+	top: 2px;
 }
 
 .pinhole-date-tag-browser .years .selected,
